# AERO_MAIN_SYS

./: .gitignore  ANALOG-PWM-circuits.txt  CMakeLists.txt  Makefile  README.md  logs_emi_issue.txt  logs_start_byte_error.txt  sdkconfig
NOM_STACK/Application/EC/: CMakeLists.txt
NOM_STACK/Application/EC/inc/: ec_application.h
NOM_STACK/Application/EC/src/: ec_application.c  prev_ec_app_exe.txt
NOM_STACK/Application/LED/: CMakeLists.txt
NOM_STACK/Application/LED/inc/: led_ctrl_application.h
NOM_STACK/Application/MAIN_SYS/: CMakeLists.txt
NOM_STACK/Application/PH/: CMakeLists.txt
NOM_STACK/Application/Pipes/: CMakeLists.txt
NOM_STACK/Application/Pipes/inc/: pipe_water_ctrl_app.h
NOM_STACK/Application/Pipes/src/: pipe_water_ctrl_app.c
NOM_STACK/Application/WL/: CMakeLists.txt
NOM_STACK/Manager/INIT/: CMakeLists.txt
NOM_STACK/Manager/INIT/inc/: initialization.h
NOM_STACK/Manager/INIT/src/: initialization.c
NOM_STACK/Manager/NormalOp/: CMakeLists.txt
NOM_STACK/Sensors/EC_sensor/: CMakeLists.txt
NOM_STACK/Sensors/PH_sensor/: CMakeLists.txt
NOM_STACK/Sensors/RealTimeClock/: CMakeLists.txt
NOM_STACK/Sensors/WL_sensor/: CMakeLists.txt
NOM_STACK/Sensors/WTEMP_sensor/: CMakeLists.txt
NOM_STACK/Services/I2C_COM/: CMakeLists.txt
NOM_STACK/Services/PUMP_IO_COM/: CMakeLists.txt
NOM_STACK/Services/Scheduler/: CMakeLists.txt
NOM_STACK/Services/Scheduler/inc/: scheduler.h
NOM_STACK/Services/Scheduler/src/: scheduler.c  scheduler_tasks.c
NOM_STACK/Signals/Sensors/: CMakeLists.txt
NOM_STACK/UI/DWIN_protocol/: CMakeLists.txt
main/: main.c
(+28 files in other folders)
